--- a/modules/loan_claim/locale/fr_FR.po
+++ b/modules/loan_claim/locale/fr_FR.po
@@ -1,6 +1,10 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "field:contract.delivered_service,is_loan:"
+msgid "Is loan"
+msgstr "Est emprunteur"
 
 msgctxt "field:contract.delivered_service,loan:"
 msgid "Loan"
