--- a/modules/collection/locale/fr_FR.po
+++ b/modules/collection/locale/fr_FR.po
@@ -1,6 +1,11 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:collection.assignment:"
+msgid "Amount (%s) for line is too big. It mustbe lower than %s"
+msgstr ""
+"Le montant (%s) de la ligne est trop élevé. Il doit être inférieur à %s."
 
 msgctxt "error:collection.collection_wizard:"
 msgid "Ventilation is not consistent : %s declared, %s assigned"
@@ -20,7 +25,11 @@ msgstr "Journal"
 
 msgctxt "field:account.configuration,default_suspense_account:"
 msgid ""
-msgstr ""
+msgstr " "
+
+msgctxt "field:account.payment,collection:"
+msgid "Collection"
+msgstr "Encaissement"
 
 msgctxt "field:collection.assign_collection,amount:"
 msgid "Amount"
@@ -146,6 +155,10 @@ msgctxt "field:collection.collection_parameters,check_reception_date:"
 msgid "Check Reception Date"
 msgstr "Date de Remise à la Banque"
 
+msgctxt "field:collection.collection_parameters,collection:"
+msgid "Collection"
+msgstr "Encaissement"
+
 msgctxt "field:collection.collection_parameters,id:"
 msgid "ID"
 msgstr "ID"
@@ -161,6 +174,10 @@ msgstr "Must Expand Tree"
 msgctxt "field:collection.collection_parameters,party:"
 msgid "Party"
 msgstr "Tiers"
+
+msgctxt "field:party.party,suspense_account:"
+msgid "Suspense account"
+msgstr "Compte d'attente"
 
 msgctxt "model:collection.assign_collection,name:"
 msgid "Assign Collection"
