--- a/modules/coop_utils/locale/fr_FR.po
+++ b/modules/coop_utils/locale/fr_FR.po
@@ -10,6 +10,10 @@ msgctxt "error:coop.table_of_table:"
 msgid "This item (%s) is used by %s (%s, %s)"
 msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
 
+msgctxt "error:coop_utils.test_case_wizard:"
+msgid "Cannot load test case file %s"
+msgstr "Impossible de charger le jeu d'essai du fichier %s"
+
 msgctxt "field:account.account,id:"
 msgid ""
 msgstr " "
@@ -210,6 +214,110 @@ msgctxt "field:coop_utils.file_selector,selected_file:"
 msgid "Import File"
 msgstr "Importer le Fichier"
 
+msgctxt "field:coop_utils.select_test_cases,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:coop_utils.select_test_cases,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:coop_utils.select_test_cases,select_all_files:"
+msgid "Select All"
+msgstr "Tout sélectionner"
+
+msgctxt "field:coop_utils.select_test_cases,select_all_test_cases:"
+msgid "Select All"
+msgstr "Tout sélectionner"
+
+msgctxt "field:coop_utils.select_test_cases,test_cases:"
+msgid "Test Cases"
+msgstr "Jeux de Test"
+
+msgctxt "field:coop_utils.select_test_cases,test_files:"
+msgid "Test Files"
+msgstr "Fichiers de test"
+
+msgctxt "field:coop_utils.test_case_file_selector,filename:"
+msgid "File name"
+msgstr "Nom du fichier"
+
+msgctxt "field:coop_utils.test_case_file_selector,full_path:"
+msgid "Full Path"
+msgstr "Chemin complet"
+
+msgctxt "field:coop_utils.test_case_file_selector,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:coop_utils.test_case_file_selector,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:coop_utils.test_case_file_selector,selected:"
+msgid "Will be loaded"
+msgstr "Seront chargés"
+
+msgctxt "field:coop_utils.test_case_model,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:coop_utils.test_case_model,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:coop_utils.test_case_model,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:coop_utils.test_case_model,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:coop_utils.test_case_model,language:"
+msgid "Test Case Language"
+msgstr "Langue des jeux d'essai"
+
+msgctxt "field:coop_utils.test_case_model,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:coop_utils.test_case_model,rec_name:"
+msgid "Name"
+msgstr "Valeur"
+
+msgctxt "field:coop_utils.test_case_model,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:coop_utils.test_case_model,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:coop_utils.test_case_selector,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:coop_utils.test_case_selector,method_name:"
+msgid "Method Name"
+msgstr "Nom de la Méthode"
+
+msgctxt "field:coop_utils.test_case_selector,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:coop_utils.test_case_selector,name:"
+msgid "Test Case Name"
+msgstr "Nom du jeu d'essai"
+
+msgctxt "field:coop_utils.test_case_selector,selected:"
+msgid "Will be executed"
+msgstr "Sera exécuté"
+
+msgctxt "field:coop_utils.test_case_selector,selection:"
+msgid "Selection"
+msgstr "Sélection"
+
 msgctxt "field:country.subdivision,id:"
 msgid ""
 msgstr " "
@@ -290,6 +398,22 @@ msgctxt "model:coop_utils.file_selector,name:"
 msgid "File Selector"
 msgstr "Selecteur de fichier"
 
+msgctxt "model:coop_utils.select_test_cases,name:"
+msgid "Select Test Case"
+msgstr "Sélection des jeux d'essai"
+
+msgctxt "model:coop_utils.test_case_file_selector,name:"
+msgid "Test Case File Selector"
+msgstr "Sélection des fichiers de jeu d'essai"
+
+msgctxt "model:coop_utils.test_case_model,name:"
+msgid "Test Case Model"
+msgstr "Jeux d'essais"
+
+msgctxt "model:coop_utils.test_case_selector,name:"
+msgid "Test Case Selector"
+msgstr "Sélection des jeux d'essai"
+
 msgctxt "model:country.subdivision,name:"
 msgid ""
 msgstr " "
@@ -297,6 +421,14 @@ msgstr " "
 msgctxt "model:ir.action,name:act_export_package"
 msgid "Export Package"
 msgstr "Exports groupés"
+
+msgctxt "model:ir.action,name:act_test_case_model"
+msgid "Test Case Parameters"
+msgstr "Paramétres des jeux d'essai"
+
+msgctxt "model:ir.action,name:act_test_case_wizard"
+msgid "Test Case Launcher"
+msgstr "Gestionnaire de jeux d'essai"
 
 msgctxt "model:ir.action,name:import_wizard"
 msgid "Import File"
@@ -314,6 +446,18 @@ msgctxt "model:ir.ui.menu,name:menu_import_wizard"
 msgid "Import Wizard"
 msgstr "Importer un fichier"
 
+msgctxt "model:ir.ui.menu,name:menu_test_case"
+msgid "Test Case"
+msgstr "Jeu de Test"
+
+msgctxt "model:ir.ui.menu,name:menu_test_case_model"
+msgid "Test Case Parameters"
+msgstr "Paramètres des jeux d'essai"
+
+msgctxt "model:ir.ui.menu,name:test_case_menu"
+msgid "Test Case Launcher"
+msgstr "Gestionnaire des jeux d'essai"
+
 msgctxt "model:party.category,name:"
 msgid "party.category"
 msgstr "Catégorie"
@@ -325,6 +469,18 @@ msgstr "Version d'Objet"
 msgctxt "model:utils.versionned_object,name:"
 msgid "Versionned Object"
 msgstr "Objet Versionné"
+
+msgctxt "selection:coop_utils.test_case_selector,selection:"
+msgid "Automatic"
+msgstr "Automatique"
+
+msgctxt "selection:coop_utils.test_case_selector,selection:"
+msgid "Manual"
+msgstr "Manuel"
+
+msgctxt "selection:coop_utils.test_case_selector,selection:"
+msgid "Not Selected"
+msgstr "Non Sélectionné"
 
 msgctxt "view:coop.dyn_selection:"
 msgid "Dynamic Selection"
@@ -350,6 +506,22 @@ msgctxt "view:coop_utils.file_selector:"
 msgid "File Selection"
 msgstr "Sélection de Fichier"
 
+msgctxt "view:coop_utils.select_test_cases:"
+msgid "Select Test Cases"
+msgstr "Sélection des jeux d'essai"
+
+msgctxt "view:coop_utils.test_case_file_selector:"
+msgid "Test Case Files"
+msgstr "Fichiers de jeu d'essai"
+
+msgctxt "view:coop_utils.test_case_model:"
+msgid "Test Case Parameters"
+msgstr "Paramètres des jeu d'essais"
+
+msgctxt "view:coop_utils.test_case_selector:"
+msgid "Test Cases"
+msgstr "Jeux de Test"
+
 msgctxt "view:utils.version_object:"
 msgid "Version Object"
 msgstr "Version d'Objet"
@@ -365,3 +537,12 @@ msgstr "Annuler"
 msgctxt "wizard_button:coop_utils.import_wizard,file_selector,file_import:"
 msgid "Import"
 msgstr "Importer"
+
+msgctxt "wizard_button:coop_utils.test_case_wizard,select_test_cases,end:"
+msgid "Quit"
+msgstr "Quitter"
+
+msgctxt ""
+"wizard_button:coop_utils.test_case_wizard,select_test_cases,execute_test_cases:"
+msgid "Execute Selected"
+msgstr "Exécuter les jeux d'essai sélectionnés"
