--- a/modules/billing/locale/fr_FR.po
+++ b/modules/billing/locale/fr_FR.po
@@ -7,7 +7,7 @@ msgid "Manual Billing"
 msgstr "Tarification Manuelle"
 
 msgctxt "model:tag,name:tag_billing"
-msgid "Billing"
+msgid "Cotisation"
 msgstr "Cotisation"
 
 msgctxt "view:contract.contract:"
