--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -54,6 +54,62 @@ msgctxt "field:contract.address,write_uid:"
 msgid ""
 msgstr " "
 
+msgctxt "field:contract.clause,clause:"
+msgid "Clause"
+msgstr "Clause"
+
+msgctxt "field:contract.clause,contract:"
+msgid "Contract"
+msgstr "Gestionnaire de Contrats"
+
+msgctxt "field:contract.clause,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:contract.clause,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:contract.clause,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract.clause,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract.clause,kind:"
+msgid "Kind"
+msgstr "Type"
+
+msgctxt "field:contract.clause,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:contract.clause,override_text:"
+msgid "Override Text"
+msgstr "Texte surchargeable"
+
+msgctxt "field:contract.clause,rec_name:"
+msgid "Name"
+msgstr "Valeur"
+
+msgctxt "field:contract.clause,text:"
+msgid "Text"
+msgstr "Texte"
+
+msgctxt "field:contract.clause,visual_text:"
+msgid "Clause Text"
+msgstr "Texte de la Clause"
+
+msgctxt "field:contract.clause,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract.clause,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
 msgctxt "field:contract.contract,addresses:"
 msgid ""
 msgstr " "
@@ -61,6 +117,10 @@ msgstr " "
 msgctxt "field:contract.contract,appliable_conditions_date:"
 msgid "Appliable Conditions Date"
 msgstr "Date de Conditions"
+
+msgctxt "field:contract.contract,clauses:"
+msgid "Clauses"
+msgstr "Clauses"
 
 msgctxt "field:contract.contract,company:"
 msgid "Company"
@@ -414,6 +474,10 @@ msgctxt "model:contract.address,name:"
 msgid ""
 msgstr " "
 
+msgctxt "model:contract.clause,name:"
+msgid "Contract clauses"
+msgstr "Clauses du contrat"
+
 msgctxt "model:contract.contract,name:"
 msgid ""
 msgstr " "
@@ -545,6 +609,10 @@ msgstr "Contrat"
 msgctxt "view:contract.address:"
 msgid "Contract Address"
 msgstr "Adresse"
+
+msgctxt "view:contract.clause:"
+msgid "Clauses"
+msgstr "Clauses"
 
 msgctxt "view:contract.contract:"
 msgid "Administration"
