--- a/modules/distribution_product/locale/fr_FR.po
+++ b/modules/distribution_product/locale/fr_FR.po
@@ -78,6 +78,10 @@ msgctxt "field:distribution.commercial_product,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:distribution.dist_network,all_com_products:"
+msgid "All Comercial Products"
+msgstr "Tous les produits commerciaux"
+
 msgctxt "field:distribution.dist_network,commercial_products:"
 msgid "Commercial Products"
 msgstr "Produits Commerciaux"
