--- a/modules/life_contract_subscription/locale/fr_FR.po
+++ b/modules/life_contract_subscription/locale/fr_FR.po
@@ -6,6 +6,14 @@ msgctxt "error:ins_contract.covered_data:"
 msgid "A coverage amount must be provided :"
 msgstr "Saisir le Montant de Couverture"
 
+msgctxt "field:ins_contract.covered_data,beneficiary_clause_override_text:"
+msgid "Beneficiary Clause Override Text"
+msgstr "Texte modifié de la claue bénéficiaire"
+
+msgctxt "field:ins_contract.covered_data,beneficiary_clause_selection:"
+msgid "Beneficiary Clause"
+msgstr "Clause bénéficiaire"
+
 msgctxt "field:ins_contract.covered_data,coverage_amount_selection:"
 msgid "Coverage Amount"
 msgstr "Montant de Couverture"
@@ -13,6 +21,19 @@ msgstr "Montant de Couverture"
 msgctxt "field:ins_contract.covered_data,currency:"
 msgid "Currency"
 msgstr "Devises"
+
+msgctxt ""
+"field:ins_contract.covered_data,may_override_beneficiary_clause_text:"
+msgid "May override Beneficiary Clause Texte"
+msgstr "Texte de la clause bénéficiaire surchargeable"
+
+msgctxt "field:ins_contract.covered_data,need_to_chose_beneficiary_clause:"
+msgid "Need to chose beneficiary clause"
+msgstr "Besoin de choisir une clause bénéficiaire"
+
+msgctxt "field:ins_contract.covered_data,possible_beneficiary_clauses:"
+msgid "Possible beneficiary Clauses"
+msgstr "Clauses bénéficiaires possibles"
 
 msgctxt "field:ins_contract.covered_data,with_coverage_amount:"
 msgid "With Coverage Amount"
