Move coop_utils / account connector in coop_account

--- a/modules/collection/test_case_data/fr_FR/test_case.po
+++ b/modules/collection/test_case_data/fr_FR/test_case.po
@@ -1,7 +1,14 @@
 msgid "Suspense Account"
 msgstr "Compte d'attente"
 
+msgid "Collection Account"
+msgstr "Compte d'Encaissement"
+
 msgid "Default Suspense Account"
 msgstr "Compte d'attente par défaut"
 
+msgid "Cash Account"
+msgstr "Compte de Cash"
 
+msgid "Check Account"
+msgstr "Compte de Chèque"
